Bug 426021 - When entering a check/bank statement number via the numeric keypad, apply the previously used separator character when entering ','
Summary: When entering a check/bank statement number via the numeric keypad, apply the...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.4
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-31 14:24 UTC by Ralf Habacker
Modified: 2020-08-31 14:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-08-31 14:24:16 UTC
With bug 424402 a problem was fixed where the input of '.' via the numeric keypad was not possible, which already fixes some cases. However, in bank statements, other separators such as '/' or '-' are often used for the
statement number (e.g. 2020/01 or 2019-1), which cannot be entered via the number field at present.

STEPS TO REPRODUCE
1. start kmymoney
2. open ledger view
3. add transaction
4. enter number field
5. Press ',' on the num keypad

OBSERVED RESULT
A '.' is always inserted instead, regardless of which separator was used in earlier numbers.

EXPECTED RESULT
Depending on what is used in previous numbers the related delimiter should be inserted.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap 15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2020-08-31 14:29:05 UTC
Git commit 7dff7ed106430f70ee060e69d69b5d5b94962daa by Ralf Habacker.
Committed on 31/08/2020 at 14:28.
Pushed by habacker into branch '4.8'.

Apply the previously used separator character when entering ',' by num keypad

'.' is used by default if no separator was entered in the previously
used number.
FIXED-IN:4.8.5

M  +4    -0    kmymoney/dialogs/transactioneditor.cpp

https://invent.kde.org/office/kmymoney/commit/7dff7ed106430f70ee060e69d69b5d5b94962daa