Apply the previously used separator character when entering ',' by num keypad

'.' is used by default if no separator was entered in the previously
used number.

BUG:426021
FIXED-IN:4.8.5